# aspyx_showcase

./: README.md  install.sh  pyproject.toml
scripts/: build-all.sh
